# test_task_pesk

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  env.example  manage.py  pyproject.toml
api/: views.py
api/v1/: urls.py
authentication/: admin.py  authentication.py  models.py  permissons.py  serializer.py  views.py
authentication/fixtures/: users.json
authentication/migrations/: 0001_initial.py
authentication/services/: jwt_service.py  token_service.py
test_task_pesk/: asgi.py  settings.py  urls.py  wsgi.py
utils/: redis_client.py
