[project]
name = "test-task-pesk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==4.2.20",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "redis>=5.2.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
